# HTTP-Protocol-Implementation

./: CMakeLists.txt  README.md  util.cpp
http/: header.cpp  http_client.cpp  http_exception.cpp  http_server.cpp  request.cpp  response.cpp
include/net/: util.h
include/net/http/: header.h  http_client.h  http_exception.h  http_server.h  request.h  response.h
include/net/net_socket/: inet_server_socket.h  inet_socket.h  ipv4_address.h  sock_address.h  socket_exception.h
net_socket/: inet_server_socket.cpp  inet_socket.cpp  ipv4_address.cpp  sock_address.cpp  socket_exception.cpp
